<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.yatindhingra.savered.carousal"
    android:background="@drawable/back">


    <com.synnapps.carouselview.CarouselView
        android:id="@+id/carouselView"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        app:fillColor="#FFFFFFFF"
        app:pageColor="#00000000"
        app:radius="6dp"
        app:slideInterval="3000"
        app:strokeColor="#FF777777"
        app:strokeWidth="1dp"
        android:layout_weight="7"
        />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cameraButton"
        android:text="@string/camera"
        android:background="@drawable/round_button"
        tools:ignore="RtlHardcoded"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_weight="1"
        />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/two_but"
    android:orientation="horizontal"
    android:layout_weight="2"
    android:layout_gravity="center">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mapButton"

        android:text="@string/maps"
        tools:ignore="RtlHardcoded"
        android:layout_marginRight="20dp"

        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/foodButton"
        android:layout_below="@id/carouselView"
        android:text="@string/search"
        tools:ignore="RtlHardcoded"
        />

    </LinearLayout>

    <Button

        android:layout_gravity="center"
        android:id="@+id/mainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/foodButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_weight="2"
        android:text="@string/track_your_workout"/>

</LinearLayout>
